[feat] cookie添加单元测试 related to issue #23

--- a/components/web-uploader/style/index.styl
+++ b/components/web-uploader/style/index.styl
@@ -101,6 +101,7 @@
           list-style: none
           margin: 0
           padding: 0
+          width: 820px
           li
             width: 152px
             height: 152px
@@ -222,7 +223,7 @@
       float: right
 .pilipa-web-uploader-btn-default, .pilipa-web-uploader-btn-primary
   width: 90px
-  height: 40px
+  padding: 8px 0px
   text-align: center
   display: inline-block
   vertical-align: top
@@ -230,7 +231,6 @@
   font-size: 14px
   box-sizing: border-box
 .pilipa-web-uploader-btn-default
-  line-height: 38px
   border: 1px solid #cfcfcf
   transform: all 200ms
   color: #333
@@ -239,8 +239,8 @@
     border: 1px solid #cfcfcf
     background: rgba(0, 0, 0, .12)
 .pilipa-web-uploader-btn-primary
-  line-height: 40px
   background: #00b7ee
+  border: 1px solid #00b7ee
   color: #fff
   &:hover
     opacity: .8
