--- a/components/form/style/index.styl
+++ b/components/form/style/index.styl
@@ -39,6 +39,10 @@ for row in 1 2 3 4 5
     font-size: 14px;
     color: #f5222d;
   .{form-item-prefix}-control-wrapper
+    &>span
+      vertical-align middle
+      input[type=checkbox], input[type=radio]
+        vertical-align middle
     .{form-item-prefix}-explain
       transition: color .15s cubic-bezier(.215,.61,.355,1);
       margin-top: -2px;
@@ -57,6 +61,9 @@ for row in 1 2 3 4 5
     *
       height 100%
       box-sizing border-box
+for row in 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
+  .col-{row}
+    width (row/24*100)%
 input
   font-family: Monospaced Number,Chinese Quote,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Helvetica Neue,Helvetica,Arial,sans-serif;
   box-sizing: border-box;
@@ -107,3 +114,5 @@ button
   color: rgba(0,0,0,.65);
   background-color: #fff;
   border-color: #d9d9d9;
+select
+  width 100%
