[fix] 优化dropdown related to issue #20

--- a/components/dropdown/style/index.styl
+++ b/components/dropdown/style/index.styl
@@ -140,6 +140,8 @@ dropdown-prefix = pilipa-prefix + '-dropdown'
       align-items: center
       border: 1px solid rgb(217, 217, 217)
       border-radius: 0px 4px 4px 0px / 0px 4px 4px 0px
+      i
+        color: #999
       &:hover
         z-index: 2
         border: 1px solid #108ee9
