[fix] autocomplete 添加defaultvalue属性 related to issue #29

--- a/components/form/style/index.styl
+++ b/components/form/style/index.styl
@@ -1,123 +1,123 @@
 @import '../../style/index.styl'
-form-prefix = pilipa-prefix + '-form'
-form-item-prefix = form-prefix + '-item'
+// form-prefix = pilipa-prefix + '-form'
+// form-item-prefix = form-prefix + '-item'
 
-.{form-prefix}-inline
-  .{form-prefix}-item
-    display inline-block
-    margin-right 16px
-    margin-bottom 0
-.{form-prefix}
-  .{form-prefix}-item
-    margin-bottom 25px
-    position relative
-    & > .{form-item-prefix}-label
-      text-align right
-      box-sizing border-box
-      padding-right 8px
-      &:after
-        content ':'
-        margin: 0 0 0 2px;
-        position: relative;
-        top: -.5px;
-    .{form-item-prefix}-required:before
-      display inline-block
-      margin-right 4px
-      content "*"
-      font-family SimSun
-      line-height 1
-      font-size 14px
-      color #f5222d
-    .{form-item-prefix}-control-wrapper
-      &>span
-        vertical-align middle
-        input[type=checkbox], input[type=radio]
-          vertical-align middle
-      .{form-item-prefix}-explain
-        transition color .15s cubic-bezier(.215,.61,.355,1)
-    .has-error
-      *
-        border 1px solid #f5222d
-      .{form-item-prefix}-explain
-        color #f5222d
-        position absolute
-        top 32px
-        border 0
-        clear both
-    .{form-item-prefix}-control-wrapper,
-    & > .{form-item-prefix}-label
-      position relative
-      font-size 14px
-      display inline-block
-      vertical-align middle
-      height: 32px;
-      line-height: 32px;
-      *
-        box-sizing border-box
-      .pilipa-dropdown
-        height 32px
-  for row in 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
-    .col-{row}
-      width (row/24*100)%
-  input
-    font-family Monospaced Number,Chinese Quote,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Helvetica Neue,Helvetica,Arial,sans-serif
-    box-sizing border-box
-    margin 0
-    list-style none
-    position relative
-    display inline-block
-    padding 4px 11px
-    width 100%
-    height 32px
-    font-size 14px
-    line-height 1.5
-    color rgba(0,0,0,.65)
-    background-color #fff
-    background-image none
-    border 1px solid #d9d9d9
-    border-radius 4px
-    transition all .3s
-  .wrap-radio:hover,
-  .wrap-checkBox:hover
-    cursor pointer
-  input[type='radio']
-    display inline-block
-    width 20px
-    &:hover
-      cursor pointer
-  input[type='radio'] + label
-    user-select none
-    &:hover
-      cursor pointer
-  input[type='checkbox']
-    display inline-block
-    width 20px
-    &:hover
-      cursor pointer
-  input[type='checkbox'] + label
-    user-select none
-    &:hover
-      cursor pointer
-  button
-    line-height 1.5
-    display inline-block
-    font-weight 400
-    text-align center
-    touch-action manipulation
-    cursor pointer
-    background-image none
-    border 1px solid #d9d9d9
-    white-space nowrap
-    padding 0 15px
-    font-size 14px
-    border-radius 4px
-    height 32px
-    user-select none
-    transition all .3s cubic-bezier(.645,.045,.355,1)
-    position relative
-    color rgba(0,0,0,.65)
-    background-color #fff
-  select
-    width 100%
-    min-width 171px
-    height 32px
+// .{form-prefix}-inline
+//   .{form-prefix}-item
+//     display inline-block
+//     margin-right 16px
+//     margin-bottom 0
+// .{form-prefix}
+//   .{form-prefix}-item
+//     margin-bottom 25px
+//     position relative
+//     & > .{form-item-prefix}-label
+//       text-align right
+//       box-sizing border-box
+//       padding-right 8px
+//       &:after
+//         content ':'
+//         margin: 0 0 0 2px;
+//         position: relative;
+//         top: -.5px;
+//     .{form-item-prefix}-required:before
+//       display inline-block
+//       margin-right 4px
+//       content "*"
+//       font-family SimSun
+//       line-height 1
+//       font-size 14px
+//       color #f5222d
+//     .{form-item-prefix}-control-wrapper
+//       &>span
+//         vertical-align middle
+//         input[type=checkbox], input[type=radio]
+//           vertical-align middle
+//       .{form-item-prefix}-explain
+//         transition color .15s cubic-bezier(.215,.61,.355,1)
+//     .has-error
+//       *
+//         border 1px solid #f5222d
+//       .{form-item-prefix}-explain
+//         color #f5222d
+//         position absolute
+//         top 32px
+//         border 0
+//         clear both
+//     .{form-item-prefix}-control-wrapper,
+//     & > .{form-item-prefix}-label
+//       position relative
+//       font-size 14px
+//       display inline-block
+//       vertical-align middle
+//       height: 32px;
+//       line-height: 32px;
+//       *
+//         box-sizing border-box
+//       .pilipa-dropdown
+//         height 32px
+//   for row in 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
+//     .col-{row}
+//       width (row/24*100)%
+//   input
+//     font-family Monospaced Number,Chinese Quote,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Helvetica Neue,Helvetica,Arial,sans-serif
+//     box-sizing border-box
+//     margin 0
+//     list-style none
+//     position relative
+//     display inline-block
+//     padding 4px 11px
+//     width 100%
+//     height 32px
+//     font-size 14px
+//     line-height 1.5
+//     color rgba(0,0,0,.65)
+//     background-color #fff
+//     background-image none
+//     border 1px solid #d9d9d9
+//     border-radius 4px
+//     transition all .3s
+//   .wrap-radio:hover,
+//   .wrap-checkBox:hover
+//     cursor pointer
+//   input[type='radio']
+//     display inline-block
+//     width 20px
+//     &:hover
+//       cursor pointer
+//   input[type='radio'] + label
+//     user-select none
+//     &:hover
+//       cursor pointer
+//   input[type='checkbox']
+//     display inline-block
+//     width 20px
+//     &:hover
+//       cursor pointer
+//   input[type='checkbox'] + label
+//     user-select none
+//     &:hover
+//       cursor pointer
+//   button
+//     line-height 1.5
+//     display inline-block
+//     font-weight 400
+//     text-align center
+//     touch-action manipulation
+//     cursor pointer
+//     background-image none
+//     border 1px solid #d9d9d9
+//     white-space nowrap
+//     padding 0 15px
+//     font-size 14px
+//     border-radius 4px
+//     height 32px
+//     user-select none
+//     transition all .3s cubic-bezier(.645,.045,.355,1)
+//     position relative
+//     color rgba(0,0,0,.65)
+//     background-color #fff
+//   select
+//     width 100%
+//     min-width 171px
+//     height 32px
