--- a/components/style/index.styl
+++ b/components/style/index.styl
@@ -40,6 +40,6 @@ for num in (1..50)
     color: #fff;
     background-color: #d58512;
     border-color: #985f0d;
-.clickabled
+.pilipa-clickabled
   color: #337ab7
   cursor: pointer
