--- a/components/dropdown/style/index.styl
+++ b/components/dropdown/style/index.styl
@@ -44,6 +44,8 @@ dropdown-prefix = pilipa-prefix + '-dropdown'
     p
       margin: 0
       padding: 5px 10px
+      font-size 12px
+      line-height 18px
     .input
       position: relative
       display: inline-block
@@ -89,6 +91,9 @@ dropdown-prefix = pilipa-prefix + '-dropdown'
             background: #efefef
           &.active
             background-color: #ecf6fd
+          span 
+            font-size: 12px
+            margin: 2px 10px
   .custom-slide-up-enter
     animation-duration: 200ms
     animation-name: customSlideDownIn
