[feat] 样式优化 related to issue #30

--- a/components/modal/style/index.styl
+++ b/components/modal/style/index.styl
@@ -47,6 +47,9 @@ modal-prefix = pilipa-prefix + '-modal'
           font-size: 21px
           opacity: .2
           font-weight: 700
+          transition: all 100ms
+          &:hover
+            opacity: .3
       .{modal-prefix}-body
         padding: 20px
       .{modal-prefix}-footer
