--- a/components/style/index.styl
+++ b/components/style/index.styl
@@ -21,14 +21,17 @@ for num in (1..50)
   cursor: pointer
   user-select: none
 .{pilipa-prefix}-btn-default
+  color: rgba(0,0,0,.65)
+  background-color: #fff
+  border-color: #d9d9d9
   &:hover
-    color: #333;
-    background-color: #e6e6e6
-    border-color: #adadad
+    color: #40a9ff;
+    background-color: #fff;
+    border-color: #40a9ff;
   &:active
-    color: #333;
-    background-color: #d4d4d4;
-    border-color: #8c8c8c;
+    color: #096dd9;
+    background-color: #fff;
+    border-color: #096dd9;
 .{pilipa-prefix}-btn-warning
   color: #FFFFFF
   background-color: #f0ad4e;
@@ -40,6 +43,17 @@ for num in (1..50)
     color: #fff;
     background-color: #d58512;
     border-color: #985f0d;
+.pilipa-btn-primary
+  color: #fff;
+  background-color: #1890ff;
+  border-color: #1890ff;
+  &:hover
+    background-color: #40a9ff;
+    border-color: #40a9ff;
+  &:active
+    color: #fff;
+    background-color: #096dd9;
+    border-color: #096dd9;
 .pilipa-clickabled
   color: #337ab7
   cursor: pointer
