--- a/components/dropdown/style/index.styl
+++ b/components/dropdown/style/index.styl
@@ -43,7 +43,7 @@ dropdown-prefix = pilipa-prefix + '-dropdown'
     transition: all 300ms
     p
       margin: 0
-      padding: 5px 10px
+      padding: 10px 12px
       font-size 12px
       line-height 18px
     .input
@@ -79,7 +79,7 @@ dropdown-prefix = pilipa-prefix + '-dropdown'
         margin: 0
         padding: 0
         li
-          padding: 2px 10px
+          padding: 2px 12px
           margin: 0
           cursor: pointer
           transition: background-color 200ms
@@ -93,7 +93,7 @@ dropdown-prefix = pilipa-prefix + '-dropdown'
             background-color: #ecf6fd
           span 
             font-size: 12px
-            margin: 2px 10px
+            // margin: 2px 10px
   .custom-slide-up-enter
     animation-duration: 200ms
     animation-name: customSlideDownIn
@@ -114,11 +114,16 @@ dropdown-prefix = pilipa-prefix + '-dropdown'
     display: flex
     cursor: pointer
     user-select: none
+    border: 1px solid rgb(217, 217, 217)
+    border-radius: 4px
+    &:hover
+      z-index: 2
+      border: 1px solid #108ee9
     .btn-left
       float: left
       overflow: hidden
       flex: 1
-      border: 1px solid rgb(217, 217, 217)
+      // border: 1px solid rgb(217, 217, 217)
       box-sizing: border-box
       border-radius: 4px 0px 0px 4px / 4px 0px 0px 4px
       background-color: white
@@ -131,9 +136,9 @@ dropdown-prefix = pilipa-prefix + '-dropdown'
         overflow: hidden
         white-space: nowrap
         padding: 0 4px
-      &:hover
-        z-index: 2
-        border: 1px solid #108ee9
+      // &:hover
+      //   z-index: 2
+      //   border: 1px solid #108ee9
     .btn-right
       background-color: white
       width: 30px
@@ -143,10 +148,11 @@ dropdown-prefix = pilipa-prefix + '-dropdown'
       display: flex
       justify-content: center
       align-items: center
-      border: 1px solid rgb(217, 217, 217)
+      // border: 1px solid rgb(217, 217, 217)
+      border-left: 1px solid transparent
       border-radius: 0px 4px 4px 0px / 0px 4px 4px 0px
       i
         color: #999
-      &:hover
-        z-index: 2
-        border: 1px solid #108ee9
+      // &:hover
+      //   z-index: 2
+      //   border: 1px solid #108ee9
