--- a/components/voucher/style/index.styl
+++ b/components/voucher/style/index.styl
@@ -67,6 +67,7 @@ voucher-prefix = pilipa-prefix + '-voucher'
             text-align: center
             padding: 0
             border: none
+            background: #FFFFFF
             i 
               display: block
               cursor: pointer
@@ -86,6 +87,8 @@ voucher-prefix = pilipa-prefix + '-voucher'
             &:nth-child(3), &:nth-child(4)
               padding: 8px 0
               background: url('../../images/money_bg.png') 0 0 / 100% auto repeat-y
+        &:hover
+          background: #efefef
   .{voucher-prefix}-table2
     thead
       tr:nth-child(1)
