--- a/components/voucher/style/index.styl
+++ b/components/voucher/style/index.styl
@@ -80,13 +80,26 @@ voucher-prefix = pilipa-prefix + '-voucher'
               &:hover
                 color: #23527c
           &:nth-child(4), &:nth-child(5)
-            padding: 8px 0
-            background: url('../../images/money_bg.png') 0 0 / 100% auto repeat-y
+            padding: 0px 0
+          .money-unit
+            height: 100%
+            span
+              border-right: 1px solid #CCC
+              display: flex
+              align-items: center
+              justify-content: center
+              &:last-child
+                border-right: none
+              &:nth-child(3), &:nth-child(6)
+                border-right: 1px solid #3492ff
+              &:nth-child(9)
+                border-right: 1px solid red
+            // background: url('../../images/money_bg.png') 0 0 / 100% auto repeat-y
         &:last-child
           td
             &:nth-child(3), &:nth-child(4)
-              padding: 8px 0
-              background: url('../../images/money_bg.png') 0 0 / 100% auto repeat-y
+              padding: 0px 0
+              // background: url('../../images/money_bg.png') 0 0 / 100% auto repeat-y
         &:hover
           background: #efefef
   .{voucher-prefix}-table2
