[fix] 凭证优化 related to issue #33

--- a/components/voucher/style/index.styl
+++ b/components/voucher/style/index.styl
@@ -34,14 +34,21 @@ voucher-prefix = pilipa-prefix + '-voucher'
     table-layout: fixed
     thead 
       font-size: 14px
+      tr 
+        th
+          height: 30px
+          padding: 0px
     tbody
       font-size: 12px
+      td
+        p
+          margin: 8px
+          padding: 0
     tr 
       th,td
         border-color: #cccccc
         border-width: 1px
         border-style: solid
-        padding: 8px
         height: 50px
   .{voucher-prefix}-table1
     thead
