[fix] 凭证样式优化 related to issue #33

--- a/components/voucher/style/index.styl
+++ b/components/voucher/style/index.styl
@@ -135,6 +135,7 @@ voucher-prefix = pilipa-prefix + '-voucher'
             text-align: center
             padding: 0
             border: none
+            background: #FFFFFF
             i 
               display: block
               cursor: pointer
