[fix] 修复modal related to issue #39

--- a/components/auto-complete/style/index.styl
+++ b/components/auto-complete/style/index.styl
@@ -44,7 +44,7 @@ auto-complete-prefix = pilipa-prefix + '-auto-complete'
     background-clip: padding-box
     transition: all 300ms
     position: absolute
-    top: 30px
+    // top: 30px
     font-size: 12px
     p
       margin: 0
