--- a/components/modal/style/index.styl
+++ b/components/modal/style/index.styl
@@ -31,6 +31,7 @@ modal-prefix = pilipa-prefix + '-modal'
       transform: translateX(-50%)
       border: 1px solid rgba(0,0,0,.32)
       box-shadow: 0 3px 9px rgba(0,0,0,.5)
+      z-index: 1001
       .{modal-prefix}-header
         padding: 15px 20px
         line-height: 20px
