[fix] 修复凭证 related to issue #33

--- a/components/dropdown/style/index.styl
+++ b/components/dropdown/style/index.styl
@@ -30,7 +30,7 @@ dropdown-prefix = pilipa-prefix + '-dropdown'
   .results
     position: absolute
     z-index 999
-    // width: 100%
+    min-width: 100%
     outline: none
     user-select: none
     padding: 5px 0px
