--- a/components/dropdown/style/index.styl
+++ b/components/dropdown/style/index.styl
@@ -47,26 +47,27 @@ dropdown-prefix = pilipa-prefix + '-dropdown'
       font-size 12px
       line-height 18px
     .input
-      position: relative
-      display: inline-block
-      padding: 4px 7px
-      margin: 5px 5%
-      width: 90%
-      height: 28px
-      line-height: 1.5
-      color: rgba(0,0,0,.65)
-      background-color: #fff
-      background-image: none
-      border: 1px solid #d9d9d9
-      border-radius: 4px
-      transition: all .3s
-      float: initial
-      &:focus
-        outline: 0
-        box-shadow: 0 0 0 2px rgba(16,142,233,.2)
-        border-color: #49a9ee
-      &:hover
-        border-color: #49a9ee
+      margin: 5px 10px
+      input
+        width: 100%
+        position: relative
+        display: inline-block
+        padding: 4px 7px
+        height: 28px
+        line-height: 1.5
+        color: rgba(0,0,0,.65)
+        background-color: #fff
+        background-image: none
+        border: 1px solid #d9d9d9
+        border-radius: 4px
+        transition: all .3s
+        float: initial
+        &:focus
+          outline: 0
+          box-shadow: 0 0 0 2px rgba(16,142,233,.2)
+          border-color: #49a9ee
+        &:hover
+          border-color: #49a9ee
     .items
       max-height: 240px
       overflow-y: auto
