[fix] dropdown 添加disabled属性 related to issue #20

--- a/components/voucher/style/index.styl
+++ b/components/voucher/style/index.styl
@@ -182,8 +182,13 @@ voucher-prefix = pilipa-prefix + '-voucher'
     span 
       width: (100/11)%
       text-align: center
-.pilipa-voucher-entry
+.pilipa-voucher-entry, .pilipa-voucher-print
   border: none
   padding: 0
   margin: 0
   box-shadow: none
+.pilipa-voucher-print
+  .money-unit
+    padding-right: 5px
+    justify-content: flex-end
+    align-items: center
