--- a/components/dropdown/style/index.styl
+++ b/components/dropdown/style/index.styl
@@ -25,6 +25,14 @@ dropdown-prefix = pilipa-prefix + '-dropdown'
   height: 30px
   line-height: 30px
   font-size: 12px
+  &.disabled
+    cursor: not-allowed
+    .costom-btn-group
+      cursor: not-allowed
+      color: rgba(0,0,0,.25);
+      background: #f5f5f5;
+      &:hover
+        border: 1px solid #d9d9d9
   .hidden
     display: none
   .results
