[fix] 修改菜单配置 related to issue #1

--- a/components/left/style/index.styl
+++ b/components/left/style/index.styl
@@ -62,3 +62,5 @@
       background: url('../../assets/images/menu-icon-configure.png')
     &.menu-icon-log
       background: url('../../assets/images/menu-icon-log.png')
+    &.menu-icon-shoporder
+      background: url('../../assets/images/menu-icon-shoporder.png')
