--- a/components/left/style/index.styl
+++ b/components/left/style/index.styl
@@ -18,9 +18,13 @@
     .logo
       width: 100px
       height: 46.8px
-      background: url('../../assets/images/logo.png') 100% 100% no-repeat
-      margin: 20px auto auto 20px
+      margin: 20px auto auto 30px
       cursor: pointer
+      img 
+        width: 100%
+        height: 100%
+        border: 0;
+        outline: none;
   .menu-icon
     width: 14px
     height: 14px
