--- a/components/login/style.styl
+++ b/components/login/style.styl
@@ -99,7 +99,7 @@
           box-shadow: 0 0 0 2px rgba(24,144,255,.2)
           border-radius: 2px
         input 
-          line-height: 40px
+          // line-height: 40px
           height: 40px
           position: absolute
           width: 100%
