[fix] 优化样式 related to issue #1

--- a/components/top/style/index.styl
+++ b/components/top/style/index.styl
@@ -1,6 +1,7 @@
 .pilipa-terrace-top
   background: #fff
   padding: 0 16px
+  height: 60px
   .icon
     cursor: pointer
     display: inline-block
@@ -11,7 +12,7 @@
     color: #333333
     cursor pointer
   .top-right
-    line-height: 64px
+    line-height: 60px
     float: right
     &>span 
       vertical-align: middle
