--- a/components/login/style.styl
+++ b/components/login/style.styl
@@ -161,17 +161,20 @@
   .select-company
     ul
       position: absolute
-      width: 280px
+      width: 100%
       margin: auto auto
       left: 0
       right: 0
       top: 50%
+      max-height: 80%
+      overflow: auto
       transform: translateY(-50%)
       li
+        width: 280px
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-bottom: 10px;
+        margin: 0 auto 10px;
         background: #FFFFFF
         padding: 10px 20px
         border-radius: 4px
