--- a/components/login/style.styl
+++ b/components/login/style.styl
@@ -1,5 +1,5 @@
 .pilipa-terrace-login-container
-  background: url('../assets/images/login-bj.png')
+  background: url('../assets/images/login-bg.jpeg')
   position: absolute
   top: 0
   right: 0
