[fix] 优化menu样式 related to issue #1

--- a/components/left/style/index.styl
+++ b/components/left/style/index.styl
@@ -12,6 +12,9 @@
         background: none
         span
           color: #E84845
+  .pilipa-menu-submenu-title-content
+    display: flex
+    align-items: center
   .top
     flex: 0 0 80px
     overflow-y: scroll
