[fix] 优化menu related to issue #1

--- a/components/menu/style/index.styl
+++ b/components/menu/style/index.styl
@@ -5,7 +5,7 @@
     cursor pointer
     .pilipa-menu-submenu-title
       line-height: 40px
-      margin: 4px 16px 4px 24px
+      margin: 4px 16px 4px 20px
       transition: all 500ms
       position relative
       &:hover
@@ -24,9 +24,13 @@
     font-size: 14px
     color: hsla(0,0%,100%,.65)
     line-height: 40px
-    margin: 4px 16px 4px 24px
+    height: 40px
+    margin: 4px 16px 4px 20px
     cursor pointer
     transition: all 500ms
+    overflow hidden
+    text-overflow: ellipsis
+    white-space: nowrap
     &:hover
       color: hsla(0,0%,100%,1)
   .pilipa-menu-item-selected
