[fix] 优化菜单样式 related to issue #1

--- a/components/menu/style/index.styl
+++ b/components/menu/style/index.styl
@@ -20,6 +20,7 @@
     .pilipa-menu-sub
       display: none
       background: #000c17
+      overflow: hidden
   .pilipa-menu-item
     font-size: 14px
     color: hsla(0,0%,100%,.65)
