[fix] 优化图片引入 related to issue #1

--- a/components/top/style/index.styl
+++ b/components/top/style/index.styl
@@ -18,6 +18,10 @@
       vertical-align: middle
   .message
     position: relative
+    background: url('../../assets/images/message.png') center center / 100% 100% no-repeat
+    width: 14px
+    height: 16px
+    margin-right: 25px
     .point
       position: absolute
       right:-2px
@@ -27,3 +31,13 @@
       height: 6px
       border-radius: 50%
       background: red
+  .im
+    background: url('../../assets/images/imicon.png') center center / 100% 100% no-repeat
+    width: 18px
+    height: 16px
+    margin-right: 25px
+  .menu
+    background: url('../../assets/images/user-menu.png') center center / 100% 100% no-repeat
+    width: 14px
+    height: 14px
+    
